# coredump-uploader

./: pyproject.toml
