[tool.poetry]
name = "coredump-uploader"
version = "0.1.0"
description = ""
authors = ["Dominik Rindhauser <dominik.rindhauser@sentry.io>"]

[tool.poetry.dependencies]
python = ">=3.9"
sentry-sdk = "^1.0.0"
click = "^7.0"
watchdog = "^5"

[tool.poetry.dev-dependencies]
pytest = "^8.0"

[tool.poetry.scripts]
upload_coredump = "coredump_uploader:cli"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
